--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,7 +13,7 @@ const currentPath = pathname.slice(1); // remove the first "/"
 			class='px-2 py-1 rounded-full hover:bg-gray-700 shadow-lg bg-slate-600'>
 			Home
 		</a>
-		<a href='/projects' class='px-2 py-1 rounded hover:bg-gray-700'>
+		<a href='#' class='px-2 py-1 rounded hover:bg-gray-700'>
 			Projects</a
 		>
 		<a href='/resume' class='px-2 py-1 rounded hover:bg-gray-700'>
