--- a/src/components/Specialties.astro
+++ b/src/components/Specialties.astro
@@ -15,11 +15,11 @@ const skills = {
     }
 ---
 
-<section class="p-3">
+<section class="p-3 z-50">
     <h2 class="text-lg font-semibold">
         Specialty Skills
     </h2>
-    <ul class="flex flex-wrap gap-x-10 gap-y-6 p-2 border-4 rounded-xl border-slate-50/10">
+    <ul class="flex flex-wrap justify-center gap-x-10 gap-y-6 p-2 border-4 rounded-xl bg-slate-900 border-slate-50/10">
         {Object.entries(skills).map((skill) => {
             return (
                 <SpecialtyCard>
