--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,16 +1,16 @@
 ---
 
 ---
-<section>
-    <div class="grid grid-rows-2 grid-cols-3 gap-7 w-full p-3 justify-center align-middle">
+<section class="my-12 z-30 w-1/2 text-center mx-auto">
+    <!-- <div class="grid grid-rows-2 grid-cols-3 gap-7 w-full p-3 justify-center align-middle"> -->
         <div class="col-span-3 h-10 sm:row-span-2 sm:col-span-2">
             <div class="">
-                <h1 class="text-xl font-bold">About Me</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, iste voluptatem deleniti, sapiente necessitatibus ipsum facere, debitis cupiditate possimus eligendi quis nisi magnam id unde repudiandae tempora hic officia earum.</p>
+                <!-- <h1 class="text-xl font-bold">About Me</h1> -->
+                <p>I am a web developer, and programmer, who loves sweeping bold design and experiences</p>
             </div>
         </div>
-        <div class="col-span-3 mx-auto sm:row-span-2 sm:col-span-1">
+        <!-- <div class="col-span-3 mx-auto sm:row-span-2 sm:col-span-1">
             <img src="FullBodyOpenSmile.JPG" class="object-cover aspect-square object-top max-w-sm self-center rounded-2xl border-2 border-slate-100/10">
-        </div>
-    </div>
+        </div> -->
+    <!-- </div> -->
 </section>
