--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@ const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.slice(1); // remove the first "/"
 ---
 
-<nav class='flex items-center z-30 justify-between p-4 absolute top-0 left-0 right-0 bg-gray-800/60 text-white'>
+<nav class='flex items-center h-16 z-30 justify-between p-4 absolute top-0 left-0 right-0 bg-gray-800/60 text-white'>
 	<div>
 		<span class='text-lg font-semibold'>Aldiery Gonzalez</span>
 	</div>
