--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -8,7 +8,7 @@ import Navbar from "../components/Navbar.astro";
 		<meta name='viewport' content='width=device-width' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
 		<meta name='generator' content={Astro.generator} />
-		<title>Astro + TailwindCSS</title>
+		<title>Aldiery.com</title>
 	</head>
 
 	<body class='w-full min-h-screen relative bg-slate-900 text-white'>
