--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,18 +5,11 @@ import SiteLayout from "../layouts/SiteLayout.astro"
 ---
   <SiteLayout>
     <div class="min-h-screen w-full bg-neutral-950 relative flex flex-col items-center justify-center antialiased">
-      <div class="max-w-2xl mx-auto p-4">
-        <h1 class="relative z-10 text-lg md:text-7xl p-3 bg-clip-text text-transparent bg-gradient-to-b from-neutral-200 to-neutral-600  text-center font-sans font-bold">
-          Looking Forward
-        </h1>
-        <p></p>
-        <p class="text-neutral-500 max-w-lg mx-auto my-2 text-sm text-center relative z-10">
-          I love this doing something in stem where I can learn and grow, and still feel creatively liberated. 
-          I will continue to work on my projects and learn new things.
-        </p>
-        	
-      </div>
-      <BackgroundBeams client:load />
-      <Button >Thank You!</Button>
+      <a href="https://53bc2d69-cd5d-4135-a6b8-ea16962a934c-00-2kbalycw4u8yx.worf.replit.dev/">Tetris</a>
+       <a href="https://c16e317b-26da-4abc-a0a1-5a0d95b19b82-00-338u2gtstn4h5.worf.replit.dev">Maps</a>
+       <a href="https://classifier.aldiery.com">Classifier</a>
+       <a href="https://cmo.aldiery.com">CMO</a>
+
+
     </div>
   </SiteLayout>
