--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -19,7 +19,7 @@ const pathname = new URL(Astro.request.url).pathname;
 		</NavLink>
 	</div>		
 	<div class='sm:flex gap-4 hidden'>
-		<a href='#' class='text-xl'>
+		<a href='https://github.com/AldieryGonzalez' class='text-xl'>
 			<svg
 				xmlns='http://www.w3.org/2000/svg'
 				width='24'
@@ -36,7 +36,7 @@ const pathname = new URL(Astro.request.url).pathname;
 				></path><path d='M9 18c-4.51 2-5-2-7-2'></path></svg
 			>
 		</a>
-		<a href='#' class='text-xl'>
+		<a href='https://www.linkedin.com/in/aldierygonzalez/' class='text-xl'>
 			<svg
 				xmlns='http://www.w3.org/2000/svg'
 				width='24'
